--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 body {
-  background: purple;
+  background: green;
 
 
 }
-
+header {
+  background-color: white;
+}
 h1 {
   color: red;
   font-size: 30px;
@@ -12,6 +14,5 @@ h1 {
 }
 
 img {
-  padding: 40px
-  border: 5px
+
 }
